--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,7 @@ development:
   adapter: mysql2
   database: tcdb_development
   encoding: utf8
+  host: mysql
   username: root
   password: "123456"
   pool: 5
@@ -16,6 +17,7 @@ test:
   adapter: mysql2
   database: tcdb_test
   encoding: utf8
+  host: mysql
   username: root
   password: "123456"
   pool: 5
@@ -25,6 +27,7 @@ production:
   adapter: mysql2
   database: tcdb_production
   encoding: utf8
+  host: mysql
   username: root
   password: "123456"
   pool: 5
