--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ development:
   adapter: mysql2
   database: tcdb_development
   encoding: utf8
-  host: mysql
+  host: tcdbBdd
   username: root
   password: "123456"
   pool: 5
@@ -17,7 +17,7 @@ test:
   adapter: mysql2
   database: tcdb_test
   encoding: utf8
-  host: mysql
+  host: tcdbBdd
   username: root
   password: "123456"
   pool: 5
@@ -27,7 +27,7 @@ production:
   adapter: mysql2
   database: tcdb_production
   encoding: utf8
-  host: mysql
+  host: tcdbBdd
   username: root
   password: "123456"
   pool: 5
